--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             <div class="card-footer d-flex justify-content-between align-items-center">
                 <small class="text-muted">themoviedb.org, ES6, GULP, Fetch API</small>
                 <div class="btn-group">
-                    <a href="https://aadil59.github.io/movie-app/dist" class="btn btn-sm btn-outline-danger" target="_blank">
+                    <a href="https://aadil59.github.io/movie-search/dist" class="btn btn-sm btn-outline-danger" target="_blank">
                         View
                     </a>
                 </div>
