--- a/index.html
+++ b/index.html
@@ -233,6 +233,25 @@
                     </div>
                 </div>
 
+                <div class="card mb-4 box-shadow">
+                    <img class="card-img-top" src="calc.png" alt="Calculator App">
+                    <div class="card-body">
+                        <h5 class="card-title">Calculator</h5>
+                        <p class="card-text">
+                           A React application with supports only for addition operation currently, as it is under developement now.
+                        </p>
+                    </div>
+                    <div class="card-footer d-flex justify-content-between align-items-center">
+                        <small class="text-muted">npx-cra, React, Flexbox</small>
+                        <div class="btn-group">
+                            <a href="https://aadil59.github.io/calculator/" class="btn btn-sm btn-outline-danger"
+                                target="_blank">
+                                View
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
             </div>
             <div class="text-center">
                 <a href="#">
