insta link update

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                 <a href="https://twitter.com/AADILKHAN59" target="_blank">
                     <i class="fab fa-twitter fa-2x"></i>
                 </a>
-                <a href="https://www.instagram.com/khanaadilnawaz" target="_blank">
+                <a href="https://www.instagram.com/aadil_n_khan/" target="_blank">
                     <i class="fab fa-instagram fa-2x"></i>
                 </a>
             </div>
