--- a/index.html
+++ b/index.html
@@ -215,6 +215,24 @@
                 </div>
 
                 <div class="card mb-4 box-shadow">
+                    <img class="card-img-top" src="thumb-9.png" alt="Todo App">
+                    <div class="card-body">
+                        <h5 class="card-title">React Progress Bar</h5>
+                        <p class="card-text">
+                            React Progress Bar which Initialize with auto random increment
+                        </p>
+                    </div>
+                    <div class="card-footer d-flex justify-content-between align-items-center">
+                        <small class="text-muted">React Hooks, CSS3 and HTML5</small>
+                        <div class="btn-group">
+                            <a href="https://aadil59.github.io/progressbar" class="btn btn-sm btn-outline-danger"
+                                target="_blank">
+                                View
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card mb-4 box-shadow">
                     <img class="card-img-top" src="thumb-6.PNG" alt="Todo App">
                     <div class="card-body">
                         <h5 class="card-title">Movie App</h5>
