added invoice app

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta content="width=device-width,initial-scale=1" name="viewport">
     <meta content="initial-scale=1,maximum-scale=1" name="viewport">
     <title>Portfolio | Aadil N Khan</title>
-    <meta content="Discover how advanced solutions from digital ground and come to the reality with great small and mid level buisiness orientation and smooth raodmap" name="description">
+    <meta
+        content="Discover how advanced solutions from digital ground and come to the reality with great small and mid level buisiness orientation and smooth raodmap"
+        name="description">
     <meta name="keywords"
         content="UI, Frontend, UX, Design, Digital, Digital Transformation, Usability, Accessibility, Startup, MERN, NodeJS, React, HTML, CSS, Webpack, Javascript, Internet of things, Big data, Blockchain, Business growth" />
     <meta property="og:title"
@@ -116,6 +118,24 @@
                         <small class="text-muted">HTML, CSS, JavaScript</small>
                         <div class="btn-group">
                             <a href="https://aadil59.github.io/slider" class="btn btn-sm btn-outline-danger"
+                                target="_blank">
+                                View
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card mb-4 box-shadow">
+                    <img class="card-img-top" src="thumb-10.jpeg" alt="Calculator App">
+                    <div class="card-body">
+                        <h5 class="card-title">Invoice</h5>
+                        <p class="card-text">
+                            An application to manage billing including some tax details like GST and CGST
+                        </p>
+                    </div>
+                    <div class="card-footer d-flex justify-content-between align-items-center">
+                        <small class="text-muted">JavaScript, CSS, HTML5</small>
+                        <div class="btn-group">
+                            <a href="https://aadil59.github.io/invoice/" class="btn btn-sm btn-outline-danger"
                                 target="_blank">
                                 View
                             </a>
@@ -256,7 +276,8 @@
                     <div class="card-body">
                         <h5 class="card-title">Calculator</h5>
                         <p class="card-text">
-                           A React application with supports only for addition operation currently, as it is under developement now.
+                            A React application with supports only for addition operation currently, as it is under
+                            developement now.
                         </p>
                     </div>
                     <div class="card-footer d-flex justify-content-between align-items-center">
